@@ -1,0 +1,12 @@
+MD5 f502d99777fba227e135372c5141b4b3 ChangeLog 449
+RMD160 357f541a82516c2498b3475c829d5fe60fa074cb ChangeLog 449
+SHA256 7fd42a6cef8f9ce800b494538bffd2a4b226ac3121d52944e7373b2e47266829 ChangeLog 449
+MD5 54fd664f52d61698114548c11276dfdb descent3-demo-1.4.0a.ebuild 1661
+RMD160 60b0de6d7836eda8c0b3a85c4f0ee3faf4193b35 descent3-demo-1.4.0a.ebuild 1661
+SHA256 2ea03ae267b2066b027b4f5d42c4381d87d6930f48cedcabd8480fd7f19a052d descent3-demo-1.4.0a.ebuild 1661
+MD5 e55c9a3b399c4e32d321fd1d2cecadf8 files/digest-descent3-demo-1.4.0a 238
+RMD160 67017f14f8156dcbe50d2132c3af85cee4c3c6d4 files/digest-descent3-demo-1.4.0a 238
+SHA256 68e2ccc51b55309e95107834de4d9e342249d01f33fdaa18b5c5dd58c3fa9bce files/digest-descent3-demo-1.4.0a 238
+MD5 b41ada99a871aedd84089296c0756873 metadata.xml 679
+RMD160 4292855758ead10598e18f6a8480589eebaccd0b metadata.xml 679
+SHA256 2ff49aacc66509e0e51dd3953acddb45af34f6e0c127a54ce6bbb4fe1d403c94 metadata.xml 679
