@@ -1,4 +1,12 @@
-MD5 28d980c533ea9e697e96c66a4221db32 ChangeLog 2136
-MD5 7dce23d1209d0ab365f0cc3f9b465779 descent3-1.4.0b-r1.ebuild 3055
+MD5 b63c44b69e1ac9a048fb01cb73bdd202 ChangeLog 2255
+RMD160 95fd28d6db140485f580d04cedbc09a9ed0aeb41 ChangeLog 2255
+SHA256 7b9fef845fa615f05d9e12dd72194f63d7efd7403f78bd3a72480c2c0152f88f ChangeLog 2255
+MD5 4445a01af1d9a3759ecc9643017e2fa2 descent3-1.4.0b-r1.ebuild 3071
+RMD160 899c46685dfb77ea66e34599e5be60d114d19939 descent3-1.4.0b-r1.ebuild 3071
+SHA256 025047e445c0efa3878071fa5fd42d7fc0e78256404b6d4a0d65c33a3cfb20b1 descent3-1.4.0b-r1.ebuild 3071
 MD5 d2af265a871305bb7fa493725388a58d files/digest-descent3-1.4.0b-r1 138
+RMD160 7ac03bdb20de4f19eceab5e90dd49b6af16924a8 files/digest-descent3-1.4.0b-r1 138
+SHA256 50b0779f5f2c2034107e40217a55b332e9ef276147b782096fddc7efcfdbcf88 files/digest-descent3-1.4.0b-r1 138
 MD5 e43b9b7575f9c659feedda43ab915f01 metadata.xml 630
+RMD160 41a041288753ddc4ac1e8f12a14e28bf5df272a8 metadata.xml 630
+SHA256 08892e50faf098cbeccc7a0aa2f5a66fe40723182c59775c29d5803fe5c0228c metadata.xml 630
